Footer fixes for extra mango section, copyright, and spacing around social icons

--- a/Magento_Theme/web/css/source/_module.less
+++ b/Magento_Theme/web/css/source/_module.less
@@ -2307,6 +2307,7 @@ box-shadow: none !important;
         .newsletter_jtf {
             width: 80%;
             margin: 9%;
+            margin-bottom: 0;
         }
         .block.newsletter input {
             border: 1px solid  @primary__color;
@@ -2516,12 +2517,9 @@ box-shadow: none !important;
     .footer {
         &.content {
             text-align:center;
-            padding-top:1%;
-            padding-bottom:1%;
-             background: url('../images/Footer_Ingredients_BottomLeft-010.png'),url('../images/Footer_Ingredients_BottomRight-011.png') @colorMiscTwo;
-                background-repeat: no-repeat;
-                background-size: 400px 285px, 652px 300px;
-                background-position: left bottom, right bottom;
+            height: 0;
+            padding: 0;
+             background: transparent;
             //background: @colorMiscTwo;
             //margin-top: 25px;
             border-top: 1px solid @footer-links-separator-border-color;
@@ -2569,6 +2567,7 @@ box-shadow: none !important;
         background-color: transparent;
         width:100%;
         background: transparent !important;
+        display: block;
     }
 
     .page-header,
